Extension/Server issue

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,40 +1,29 @@
 {
   "manifest_version": 3,
-  "name": "JobSyncAI",
+  "name": "Job Saver",
   "version": "1.0",
-  "description": "Track your job applications across different platforms",
-  "permissions": [
-    "activeTab",
-    "storage",
-    "scripting"
-  ],
-  "host_permissions": [
-    "https://*.linkedin.com/*",
-    "https://*.indeed.com/*",
-    "https://*.glassdoor.com/*"
-  ],
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "icons/globe.png",
-      "48": "icons/globe.png",
-      "128": "icons/globe.png"
-    }
-  },
+  "permissions": ["storage", "activeTab", "scripting"],
+  "host_permissions": ["*://www.linkedin.com/*", "*://www.indeed.com/*"],
   "background": {
-    "service_worker": "background.js"
+      "service_worker": "background.js"
+  },
+  "action": {
+      "default_popup": "popup.html",
+      "default_icon": {
+          "16": "icons/globe.png",
+          "32": "icons/globe.png",
+          "48": "icons/globe.png",
+          "128": "icons/globe.png"
+      }
   },
   "content_scripts": [
-    {
-      "matches": [
-        "https://*.linkedin.com/*jobs*",
-        "https://*.linkedin.com/jobs/*",
-        "https://www.linkedin.com/jobs/view/*",
-        "https://*.indeed.com/*",
-        "https://*.glassdoor.com/*"
-      ],
-      "js": ["content.js"],
-      "run_at": "document_idle"
-    }
-  ]
+      {
+          "matches": ["*://www.linkedin.com/jobs/*", "*://www.indeed.com/viewjob?*"],
+          "js": ["content.js"]
+      }
+  ],
+  "web_accessible_resources": [{
+      "resources": ["icons/*"],
+      "matches": ["<all_urls>"]
+  }]
 }
