--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,7 +3,7 @@
   "name": "Job Saver",
   "version": "1.0",
   "permissions": ["storage", "activeTab", "scripting"],
-  "host_permissions": ["*://www.linkedin.com/*", "*://www.indeed.com/*"],
+  "host_permissions": ["*://www.linkedin.com/*", "*://www.indeed.com/*", "http://localhost:3000/*"],
   "background": {
       "service_worker": "background.js"
   },
